[package]
name = "cep"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "4.5.23"
derive = "1.0.0"
reqwest = { version = "0.12.9", features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["full"] }
